made changes to try and fix alignment issues on chromium browsers

--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ button{
 .header{
     top:0;
     margin-top: -30px;
-    margin-left:0;
+    margin-right:100%;
+    margin-left: auto;
 }
 
 .left-content{
@@ -38,17 +39,18 @@ button{
 
 .right-content{
     display: flex;
+    width: 400px;
     font-size: 18px;
     color: #e5e7eb;
     margin-top: -25px;
-    margin-left: 1700px;
+    margin-left: 1525px;
     font-weight: 300;
 }
 
 .toplayer{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    width: 100%;
     background-color: #1f2937;
     padding-left: 50px;
     padding-top: 50px;
